# games_using_ga

./: .gitignore  CMakeLists.txt  LatticeThread.cpp  LatticeThread.h  README.md  evo_games.pro  evolutionary_games.cpp  genetic_algorithm.cpp  genetic_algorithm.h  geneticindividual.cpp  geneticindividual.h  geneticlattice.cpp  geneticlattice.h  geneticpopulation.cpp  geneticpopulation.h  lattice.cpp  lattice.h  latticeqobject.cpp  latticeqobject.h  main.cpp  main.qml  plot_data.py
test_project/: test_project.pro  tst_geneticalgorithm.cpp
